@@ -1,6 +1,8 @@
 Release Notes
 =============
 
+* look for PAL before SLALIB
+
 Ocbober 1, 2014, don la dieu  (nega@icecube.umd.edu)
 ----------------------------------------------------
 
